--- a/extern/ABY/src/abycore/CMakeLists.txt
+++ b/extern/ABY/src/abycore/CMakeLists.txt
@@ -20,7 +20,8 @@ add_library(ABY::aby ALIAS aby)
 
 target_compile_features(aby PUBLIC cxx_std_17)
 #target_compile_options(aby PRIVATE "-Wall" "-Wextra" "-Weffc++")
-target_compile_options(aby PRIVATE "-Wall" "-Wextra")
+# target_compile_options(aby PRIVATE "-Wall" "-Wextra")
+target_compile_options(aby PRIVATE "-Wall" "-Wextra" "-g" "-ggdb")
 
 target_include_directories(aby
     PUBLIC
